--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+<html>
 <head>
   </<head>
   <body>
     <h1>Add bookmarks</h1>
     <form action="/bookmarks" method="post">
-      <input type="text" name="url" />
+      <input type="text" name="url" placeholder="URL"/>
+      <input type="text" name="title" placeholder="Title"/>
       <input type="submit" value="Submit"/>
       </form>
     </body>
