Added method override for delete http route

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,6 +11,7 @@
       <a href="<%=bookmark.url%>">
         <%=bookmark.title%></a>
         <form action="/bookmarks/<%=bookmark.id%>" method="post">
+        <input type='hidden' name='_method' value='DELETE'/>
         <input type="submit" value="Delete">
         </form>
     </li>
