--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -4,3 +4,4 @@
   <input type="text" name="title" value="<%= @bookmark.title %>" />
   <input type="submit" value="Submit" />
 </form>
+<p> <%= flash[:notice] %>
