--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -9,5 +9,6 @@
       <input type="text" name="title" placeholder="Title"/>
       <input type="submit" value="Submit"/>
       </form>
+      <p> <%= flash[:notice] %>
     </body>
 </html>
